get weather data for summary pages from the API, implement settings screen layout (no logic yet)